# blahgd

./: .gitignore  .gitmodules  .hgignore  .hgsigs  .hgtags  CMakeLists.txt  Makefile  README  admin.c  archive.c  archive.cgi  ast.c  ast.h  ast_cmd.c  atomic.h  avl.c  avl.h  cat.cgi  category.c  comment.c  comment.h  common-foot.sh  common-head.sh  config.c  config.cmake  config.h  config.h.in  config.lisp  config_opts.h  daemon.c  daemon.h  db.c  db.h  debug.h  decode.c  decode.h  dir.c  dir.h  error.c  error.h  (+96 more)
cmake/: hg.cmake
docs/: comment-spam.txt  lisp-metadata.txt  lisp.txt  post-fmt3.txt
smf/: blahg-daemon.xml  math-daemon.xml
templates/: archive-pager.html  category-pager.html  footer.html  header.atom  header.html  header.rss2  index-pager.html  sidebar-archive-item.html  sidebar-bottom.html  sidebar-cat-item.html  sidebar-middle.html  sidebar-top.html  story-bottom-desc.atom  story-bottom-desc.rss2  story-bottom-short.html  story-bottom.html  story-bottom.rss2  story-cat-item.atom  story-cat-item.html  story-cat-item.rss2  story-comment-item-head.html  story-comment-notsaved.html  story-comment-tail.html  story-middle-desc.atom  story-middle-desc.rss2  story-middle.atom  story-middle.rss2  story-top.atom  story-top.html  story-top.rss2
templates/atom/: comment.tmpl  commentlist.tmpl  index.tmpl  tag.tmpl
templates/html/: archive.tmpl  archivepager.tmpl  catindex.tmpl  comment_error.tmpl  footer.tmpl  header.tmpl  indexpager.tmpl  sidebar.tmpl  story.tmpl  storyview.tmpl  tagindex.tmpl  tagpager.tmpl
templates/rss2/: comment.tmpl
test/: CMakeLists.txt
test/fmt3/: CMakeLists.txt  basic_math.tex  bug.tex  degree.tex  emph.tex  item.tex  listing.tex  photolink.tex  subsection.tex  subsubsection.tex  tag.tex  textbf.tex  textit.tex  texttt.tex  title.tex
test/fmt3-basic/: CMakeLists.txt  bold-emph.tex  bold.tex  env-par.txt  env.txt  nbsp.tex
test/fmt3-bugs/: CMakeLists.txt  command-with-newline.tex  excessive-newline.tex  parend-with-garbage-wspace.tex
test/fmt3-commands/: CMakeLists.txt  category.tex  comment.tex  img.tex  link.tex  photo.tex  section.tex  table.tex  trow.tex  utf8.tex  verbatim.tex  wiki.tex
test/fmt3-math/: add-var-var.tex  curly-var.tex  div-num-num.tex  equal-num-num.tex  equal-var-var.tex  float-minus1.0.tex  float-plus1.0.tex  mul-var-var.tex  paren-num.tex  paren-var.tex  pow-2-to-3-curly.tex  sqrt-9.tex  subscript-2-3-curly.tex  subscript-2-3.tex  subtract-num-num.tex  var-abcdef.tex
test/lisp-parser/: CMakeLists.txt
test/qstring-basic/: CMakeLists.txt  no-value-long.qs
tests/: CMakeLists.txt
tests/fmt3-bugs/: CMakeLists.txt  comment-par.tex
tests/fmt3-commands/: abbrev.tex  leftrightarrow.tex  listing-env.tex  post.tex  published.tex  texttt-env.tex  twitterimg.tex
tests/fmt3-math/: CMakeLists.txt  add-num-num.tex  curly-integer.tex  div-var-var.tex  float-1.0.tex  integer-minus1.tex  integer-plus1.tex  mul-num-num.tex  pow-2-to-3.tex  subtract-var-var.tex
web/: style.css
web/math/: .hgignore
web/templates/: footer.atom  header.atom  header.html  sidebar-middle.html  sidebar-tag-item.html  sidebar-top.html  story-bottom.atom  story-bottom.html  story-cat-item.atom  story-cat-item.html  story-comment-head.html  story-comment-item-tail.html  story-comment-saved.html  story-middle.html  story-tag-item.atom  story-tag-item.html  story-top.html  tag-pager.html
web/templates/atom/: commentlist.tmpl  feed.tmpl  index.tmpl  story.tmpl  storyview.tmpl  tag.tmpl
web/templates/common/: storyview.tmpl
web/templates/html/: 301.tmpl  404.tmpl  archivepager.tmpl  archlink.tmpl  catpager.tmpl  comment.tmpl  comment_error.tmpl  comment_saved.tmpl  commentform.tmpl  error_atom_only.tmpl  error_comment_feed.tmpl  error_story_not_found.tmpl  error_unsupported_feed_fmt.tmpl  footer.tmpl  fullstory.tmpl  header.tmpl  index.tmpl  indexpager.tmpl  sidebar.tmpl  story.tmpl  tag.tmpl  tagcloud.tmpl  tagpager.tmpl
web/templates/rss2/: commentlist.tmpl  feed.tmpl  story.tmpl  tag.tmpl
